--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@ body { background-color: #DDDDDD; }
 #infoboxgraph { width: 300px; height: 135px; padding-top: 10px; padding-bottom: 10px;}
 #statsbox { position: absolute; bottom: 0; right: 0; background-color: #000; padding: 10px; opacity: 0.70; color: white; filter:alpha(opacity=70); }
 
-#balancegraph { padding: 10px 0; display: none; }
-#overallgraph { padding: 10px 0; display: none; }
+#overallgraphs { display: none; }
+#balancegraph { padding: 10px 0; }
+#overallgraph { padding: 10px 0; }
 #historicstats { font-size: 9px; }
 #keyinfo { font-size: 9px; padding: 10px 0 2px 0; text-align: center; }
 #refreshstatus { font-size: 9px; }
@@ -19,7 +20,7 @@ body { background-color: #DDDDDD; }
 .showhide, .showhide a { font-size: 9px; }
 .showhide { padding-top: 5px; float: right; }
 .showhidecap { font-size: 9px; }
-#logo { float: left; width: 62px; height: 57px; margin-right: 10px; }
+#logo { float: left; width: 42px; height: 57px; margin-right: 10px; }
 #logo a img {  border: 0px solid #000000; }
 #title, #title b { font-size: 24px; }
 #keywrapper { float: right; }
